== 1.5.2 (dev)

* enhancements
  * Add support for rails 3.1 new mass assignment conventions (by github.com/kirs)

* bug fix
  * OmniAuth error message now shows the proper option (:strategy_class instead of :klass)

== 1.5.1

* bug fix
  * Devise should not attempt to load OmniAuth strategies. Strategies should be loaded before hand by the developer or explicitly given to Devise.

== 1.5.0

* enhancements
  * Timeoutable also skips tracking if skip_trackable is given
  * devise_for now accepts :failure_app as an option
  * Models can select the proper mailer via devise_mailer method (by github.com/locomotivecms)
  * Migration generator now uses the change method (by github.com/nashby)
  * Support to markerb templates on the mailer generator (by github.com/sbounmy)
  * Support for Omniauth 1.0 (older versions are no longer supported) (by github.com/TamiasSibiricus)

* bug fix
  * Allow idempotent API requests
  * Fix bug where logs did not show 401 as status code
  * Change paranoid settings to behave as success instead of as failure
  * Fix bug where activation messages were shown first than the credentials error message
  * Instance variables are expired after sign out

* deprecation
  * redirect_location is deprecated, please use after_sign_in_path_for
  * after_sign_in_path_for now redirects to session[scope_return_to] if any value is stored in it

== 1.4.9

* bug fix
  * url helpers were not being set under some circumstances

== 1.4.8

* enhancements
  * Add docs for assets pipeline and Heroku

* bug fix
  * confirmation_url was not being set under some circumstances

== 1.4.7

* bug fix
  * Fix backward incompatible change from 1.4.6 for those using custom controllers

== 1.4.6

* enhancements
  * Allow devise_for :skip => :all
  * Allow options to be passed to authenticate_user!
  * Allow --skip-routes to devise generator
  * Add allow_params_authentication! to make it explicit when params authentication is allowed in a controller

== 1.4.5

* bug fix