@@ -23,18 +23,21 @@ module Devise
       # Checks whether the user session has expired based on configured time.
       def timedout?(last_access)
         return false if remember_exists_and_not_expired?
-        
-        last_access && last_access <= self.class.timeout_in.ago
+
+        timeout_in = self.class.timeout_in
+        timeout_in = timeout_in.call(self) if timeout_in.respond_to?(:call)
+
+        !timeout_in.nil? && last_access && last_access <= timeout_in.ago
       end
-      
+
       private
-      
+
       def remember_exists_and_not_expired?
         return false unless respond_to?(:remember_expired?)
-        
+
         remember_created_at && !remember_expired?
       end
-      
+
       module ClassMethods
         Devise::Models.config(self, :timeout_in)
       end
