@@ -14,6 +14,26 @@ class TimeoutableTest < ActiveSupport::TestCase
     assert_not new_user.timedout?(nil)
   end
 
+  test 'should accept timeout_in proc and provide user as argument' do
+    user = new_user
+
+    timeout_in = proc do |obj|
+      assert_equal user, obj
+      10.minutes
+    end
+
+    swap Devise, :timeout_in => timeout_in do
+      assert user.timedout?(12.minutes.ago)
+      assert_not user.timedout?(8.minutes.ago)
+    end
+  end
+
+  test 'should not be expired when timeout_in proc returns nil' do
+    swap Devise, :timeout_in => proc { nil } do
+      assert_not new_user.timedout?(10.hours.ago)
+    end
+  end
+
   test 'fallback to Devise config option' do
     swap Devise, :timeout_in => 1.minute do
       user = new_user
